[package]
name = "fdbdir"
version = "0.1.12"
edition = "2021"
description = "FoundationDB Directory Explorer CLI (interactive REPL with tuple decoding)"
repository = "https://github.com/panghy/fdbdir"
homepage = "https://github.com/panghy/fdbdir"
license = "MIT"

[dependencies]
anyhow = "=1.0.99"
clap = { version = "=4.5.47", features = ["derive"] }
rustyline = "=13.0.0"
tokio = { version = "=1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
futures-util = "=0.3.31"
shell-words = "=1.1.0"
hex = "=0.4.3"
owo-colors = "=4.2.2"
dirs = "=5.0.1"

# Local path to foundationdb-rs crates
foundationdb = { version = "=0.9.2", features = ["fdb-7_1", "embedded-fdb-include"] }

[workspace]
members = [ "." ]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "panghy/homebrew-tap"
# CI backends to support
ci = "github"
allow-dirty = ["ci"]
# Enable publishing Homebrew tap via CI
publish-jobs = ["homebrew"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
